[package]
name = "MarkHTML"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9.3"
clap = "2.33"
clipboard = "0.5"
webbrowser = "0.5"
base64 = "0.13"
image = "0.23"
syntect = "4.6.0"
log = "0.4.14"
env_logger = "0.9.0"

