[package]
name = "textscribe"
version = "0.1.4"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9.3"
clap = "2.33"
clipboard = "0.5"
webbrowser = "0.8"
base64 = "0.13"
image = "0.23"
syntect = "4.6.0"
log = "0.4.14"
env_logger = "0.9.0"
epub-builder = "0.6"
anyhow = "1.0.86"
rayon = "1.10.0"
arc = "0.0.1"

